// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render based on current route 1`] = `
<div
  class="root visible"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu headerIcon"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <button
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </button>
          <div
            class="userProfile"
          >
            <button
              class="username"
            >
              Hikaru Sulu
            </button>
            <button
              class="logout"
            >
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="footer"
      >
        <button
          class="pin"
          type="button"
        >
          <span
            aria-label="fa-thumb-tack"
            class="fa fa-thumb-tack pinIcon"
          />
        </button>
        <div
          class="versions"
        >
          <div>
            Sulu (
            <a
              href="https://github.com/sulu/sulu/releases"
              rel="noopener noreferrer"
              target="_blank"
            >
              2.0.0-RC1
            </a>
            )
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <div
          class="snackbar error"
          role="button"
        >
          <span
            aria-label="su-exclamation-triangle"
            class="su-exclamation-triangle icon"
          />
          <div
            class="text"
          >
            <strong>
              sulu_admin.error
            </strong>
          </div>
          <span
            aria-label="su-times"
            class="su-times clickable closeIcon"
            role="button"
            tabindex="0"
          />
        </div>
        <nav
          class="toolbar light"
        >
          <div
            class="controls light grow"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-bars"
                class="su-bars icon"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      >
        <div>
          <h1>
            Test
          </h1>
          <h2>
            test
          </h2>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Render based on current route with app version 1`] = `
<div
  class="root visible"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu headerIcon"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <button
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </button>
          <div
            class="userProfile"
          >
            <button
              class="username"
            >
              Hikaru Sulu
            </button>
            <button
              class="logout"
            >
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="footer"
      >
        <button
          class="pin"
          type="button"
        >
          <span
            aria-label="fa-thumb-tack"
            class="fa fa-thumb-tack pinIcon"
          />
        </button>
        <div
          class="versions"
        >
          <div>
            Sulu (666)
          </div>
          <div>
            Sulu (
            <a
              href="https://github.com/sulu/sulu/releases"
              rel="noopener noreferrer"
              target="_blank"
            >
              2.0.0-RC1
            </a>
            )
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <div
          class="snackbar error"
          role="button"
        >
          <span
            aria-label="su-exclamation-triangle"
            class="su-exclamation-triangle icon"
          />
          <div
            class="text"
          >
            <strong>
              sulu_admin.error
            </strong>
          </div>
          <span
            aria-label="su-times"
            class="su-times clickable closeIcon"
            role="button"
            tabindex="0"
          />
        </div>
        <nav
          class="toolbar light"
        >
          <div
            class="controls light grow"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-bars"
                class="su-bars icon"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      >
        <div>
          <h1>
            Test
          </h1>
          <h2>
            test
          </h2>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Render login when user is not logged in 1`] = `
Array [
  <div
    class="login"
  >
    <div
      class="loginContainer"
    >
      <div
        class="formContainer"
      >
        <div
          class="logoContainer"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu"
          />
        </div>
        <div
          class="header"
        >
          sulu_admin.welcome
        </div>
        <form
          class="form"
        >
          <fieldset>
            <label
              class="inputField"
            >
              <div
                class="labelText"
              >
                sulu_admin.username_or_email
              </div>
              <label
                class="input default left"
              >
                <div
                  class="prependedContainer default"
                >
                  <span
                    aria-label="su-user"
                    class="su-user icon default"
                  />
                </div>
                <input
                  type="text"
                  value=""
                />
              </label>
            </label>
            <label
              class="inputField"
            >
              <div
                class="labelText"
              >
                sulu_admin.password
              </div>
              <label
                class="input default left"
              >
                <div
                  class="prependedContainer default"
                >
                  <span
                    aria-label="su-lock"
                    class="su-lock icon default"
                  />
                </div>
                <input
                  type="password"
                  value=""
                />
              </label>
            </label>
            <div
              class="buttons"
            >
              <button
                class="button link"
                type="button"
              >
                <span
                  class="text"
                >
                  sulu_admin.forgot_password
                </span>
              </button>
              <button
                class="button primary"
                disabled=""
                type="submit"
              >
                <span
                  class="text"
                >
                  sulu_admin.login
                </span>
              </button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        class="backLinkContainer"
      >
        <a
          class="backLink"
          href="/"
        >
          <span
            aria-label="su-angle-left"
            class="su-angle-left backLinkIcon"
          />
          sulu_admin.back_to_website
        </a>
      </div>
    </div>
  </div>,
  <div
    class="loader"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>,
]
`;

exports[`Render login with loader 1`] = `
Array [
  <div
    class="login"
  >
    <div
      class="loginContainer"
    >
      <div
        class="formContainer"
      >
        <div
          class="logoContainer"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu"
          />
        </div>
        <div
          class="loaderContainer"
        >
          <div
            class="spinner"
            style="width: 20px; height: 20px;"
          >
            <div
              class="doubleBounce1"
            />
            <div
              class="doubleBounce2"
            />
          </div>
        </div>
      </div>
      <div
        class="backLinkContainer"
      />
    </div>
  </div>,
  <div
    class="loader"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>,
]
`;

exports[`Render opened navigation 1`] = `
<div
  class="root visible navigationVisible"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu headerIcon"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <button
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </button>
          <div
            class="userProfile"
          >
            <button
              class="username"
            >
              Hikaru Sulu
            </button>
            <button
              class="logout"
            >
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="footer"
      >
        <button
          class="pin"
          type="button"
        >
          <span
            aria-label="fa-thumb-tack"
            class="fa fa-thumb-tack pinIcon"
          />
        </button>
        <div
          class="versions"
        >
          <div>
            Sulu (
            <a
              href="https://github.com/sulu/sulu/releases"
              rel="noopener noreferrer"
              target="_blank"
            >
              2.0.0-RC1
            </a>
            )
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <div
      class="backdrop"
      role="button"
    />
    <main
      class="main"
    >
      <header
        class="header"
      >
        <div
          class="snackbar error"
          role="button"
        >
          <span
            aria-label="su-exclamation-triangle"
            class="su-exclamation-triangle icon"
          />
          <div
            class="text"
          >
            <strong>
              sulu_admin.error
            </strong>
          </div>
          <span
            aria-label="su-times"
            class="su-times clickable closeIcon"
            role="button"
            tabindex="0"
          />
        </div>
        <nav
          class="toolbar light"
        >
          <div
            class="controls light grow"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-times"
                class="su-times icon"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      >
        <div>
          <h1>
            Test
          </h1>
          <h2>
            test
          </h2>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Should not fail if current route does not exist 1`] = `
<div
  class="root visible"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu headerIcon"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <button
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </button>
          <div
            class="userProfile"
          >
            <button
              class="username"
            >
              Hikaru Sulu
            </button>
            <button
              class="logout"
            >
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="footer"
      >
        <button
          class="pin"
          type="button"
        >
          <span
            aria-label="fa-thumb-tack"
            class="fa fa-thumb-tack pinIcon"
          />
        </button>
        <div
          class="versions"
        >
          <div>
            Sulu (
            <a
              href="https://github.com/sulu/sulu/releases"
              rel="noopener noreferrer"
              target="_blank"
            >
              2.0.0-RC1
            </a>
            )
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <div
          class="snackbar error"
          role="button"
        >
          <span
            aria-label="su-exclamation-triangle"
            class="su-exclamation-triangle icon"
          />
          <div
            class="text"
          >
            <strong>
              sulu_admin.error
            </strong>
          </div>
          <span
            aria-label="su-times"
            class="su-times clickable closeIcon"
            role="button"
            tabindex="0"
          />
        </div>
        <nav
          class="toolbar light"
        >
          <div
            class="controls light grow"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-bars"
                class="su-bars icon"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      />
    </main>
  </div>
</div>
`;
